Data Processing Wanyi

--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -42,15 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2728: DtypeWarning: Columns (43,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n",
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:33: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:34: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Processing Code of Kevin\n",
     "# Loading Data\n",
-    "Raw_Data = pd.read_csv(\"C:/Users/Kevin Zhang/OneDrive - The City University of New York/Columbia Courses/2018 Fall/GR5291 Advanced Data Analysis/Group Project/Data for ADA/Data/listings.csv\")\n",
+    "#Raw_Data = pd.read_csv(\"C:/Users/Kevin Zhang/OneDrive - The City University of New York/Columbia Courses/2018 Fall/GR5291 Advanced Data Analysis/Group Project/Data for ADA/Data/listings.csv\")\n",
+    "Raw_Data = pd.read_csv(\"/Users/wanyiellenzheng/Desktop/LIFE/MA/ada/projects/listings.csv\")\n",
     "\n",
     "# Initialing Data Frame and Processing the first variable\n",
     "Processed_Data = pd.DataFrame(data = Raw_Data['host_is_superhost'])\n",
@@ -81,16 +95,53 @@
     "# Transforming the host_is_superhost into 0-1\n",
     "Processed_Data['require_guest_phone_verification'][Processed_Data['require_guest_phone_verification'] == 't'] = 1\n",
     "Processed_Data['require_guest_phone_verification'][Processed_Data['require_guest_phone_verification'] == 'f'] = 0\n",
-    "Processed_Data.to_csv('Processed_Data.csv', encoding = 'utf-8')"
+    "#Processed_Data.to_csv('Processed_Data.csv', encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Processing Code of Wanyi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test"
+    "######## Variables BATHROOMS\n",
+    "bathrooms = pd.DataFrame(data = Raw_Data['bathrooms'])\n",
+    "# Imputing the missing value by 0\n",
+    "bathrooms['bathrooms'] = bathrooms['bathrooms'].replace(np.NaN, 0)\n",
+    "# Combine the processed datas\n",
+    "Processed_Data = pd.concat([Processed_Data, bathrooms], axis = 1)\n",
+    "\n",
+    "######## Variables BATHROOMS\n",
+    "bedrooms = pd.DataFrame(data = Raw_Data['bedrooms'])\n",
+    "# Imputing the missing value by 0\n",
+    "bedrooms['bedrooms'] = bedrooms['bedrooms'].replace(np.NaN, 0)\n",
+    "# Combine the processed datas\n",
+    "Processed_Data = pd.concat([Processed_Data, bedrooms], axis = 1)\n",
+    "\n",
+    "######## Variables WEEKLY_PRICE\n",
+    "weekly_price = pd.DataFrame(data = Raw_Data['weekly_price'])\n",
+    "# Imputing the missing value by 0 and existing values by 1\n",
+    "weekly_price['weekly_price'] = weekly_price['weekly_price'].replace(np.NaN, 0)\n",
+    "weekly_price['weekly_price'][weekly_price['weekly_price'] != 0] = 1 \n",
+    "# Combine the processed datas\n",
+    "Processed_Data = pd.concat([Processed_Data, weekly_price], axis = 1)\n",
+    "\n",
+    "######## Variables MONTHLY_PRICE\n",
+    "monthly_price = pd.DataFrame(data = Raw_Data['monthly_price'])\n",
+    "# Imputing the missing value by 0 and existing values by 1\n",
+    "monthly_price['monthly_price'] = monthly_price['monthly_price'].replace(np.NaN, 0)\n",
+    "monthly_price['monthly_price'][monthly_price['monthly_price'] != 0] = 1 \n",
+    "# Combine the processed datas\n",
+    "Processed_Data = pd.concat([Processed_Data, monthly_price], axis = 1)\n",
+    "\n",
+    "Processed_Data.to_csv('Processed_Data.csv', encoding = 'utf-8')"
    ]
   }
  ],
@@ -110,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
