Data processed by Woody

--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -141,7 +141,80 @@
     "# Combine the processed datas\n",
     "Processed_Data = pd.concat([Processed_Data, monthly_price], axis = 1)\n",
     "\n",
-    "Processed_Data.to_csv('Processed_Data.csv', encoding = 'utf-8')"
+    "# Processed_Data.to_csv('Processed_Data.csv', encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Processing Code of Woody"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = Raw_Data\n",
+    "\n",
+    "# Combine the elements into a long string for further process.\n",
+    "longst = data['host_verifications'][1][1: len(data['host_verifications'][1])-1]\n",
+    "for i in range(1,data.shape[0]):\n",
+    "    print(str(i)+'a', end = '\\r')\n",
+    "    strr = data['host_verifications'][i][1: len(data['host_verifications'][i])-1]\n",
+    "    longst = longst + ', ' + strr\n",
+    "\n",
+    "# Split the long string into a long list. Thus we successfully seperates the elements of varifications.\n",
+    "longst = longst.split(', ')\n",
+    "\n",
+    "# Remove meaningless elements\n",
+    "while '' in longst:\n",
+    "    longst.remove('')\n",
+    "while 'on' in longst:\n",
+    "    longst.remove('on')\n",
+    "\n",
+    "# Create the benchmark list that contains the elements.    \n",
+    "bench = pd.Series(longst).unique()\n",
+    "\n",
+    "# Expand the dataframe and turn the original data into dummy variables.\n",
+    "n1 = len(bench)\n",
+    "n0 = data.shape[0]\n",
+    "varification = pd.DataFrame(0, index=range(n0), columns=bench)\n",
+    "for j in range(n0):\n",
+    "    print(str(j)+'b', end = '\\r')\n",
+    "    hostinf = data['host_verifications'][j][1: len(data['host_verifications'][j])-1].split(', ')\n",
+    "    if hostinf[0] == '' or hostinf[0] == 'on':\n",
+    "        continue\n",
+    "    for k in range(len(hostinf)):\n",
+    "        name = hostinf[k]\n",
+    "        varification[name][j] = 1\n",
+    "\n",
+    "# Another representation of the host_varification data. Count the number of varifications each host holds.\n",
+    "vari2 = []\n",
+    "for l in range(n0):\n",
+    "    print(str(l)+'c', end = '\\r')\n",
+    "    hostvari = data['host_verifications'][l][1: len(data['host_verifications'][l])-1].split(', ')\n",
+    "    count = len(hostvari)\n",
+    "    vari2.append(count)\n",
+    "varification['count'] = vari2\n",
+    "\n",
+    "# Attach reviews_per_month variable.\n",
+    "varification['reviews_per_month'] = data['reviews_per_month']\n",
+    "\n",
+    "# Attach cleaning_fee variable.\n",
+    "for m in range(n0):\n",
+    "    print(str(m)+'d', end = '\\r')\n",
+    "    out = data['cleaning_fee'][m]\n",
+    "    if type(out) != float:\n",
+    "        data['cleaning_fee'][m] = float(out[1:])\n",
+    "    else:\n",
+    "        data['cleaning_fee'][m] = 0\n",
+    "varification['cleaning_fee'] = data['cleaning_fee']\n",
+    "\n",
+    "# Combine the processed datas.\n",
+    "Processed_Data = pd.concat([Processed_Data, varification], axis = 1)"
    ]
   }
  ],
@@ -161,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
