--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -23,15 +23,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-=======
-   "execution_count": 2,
-   "metadata": {},
->>>>>>> dadd0c75536eddbd1a49f753eb41c41b360920cd
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -116,15 +111,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-=======
-   "execution_count": 5,
-   "metadata": {},
->>>>>>> dadd0c75536eddbd1a49f753eb41c41b360920cd
    "outputs": [],
    "source": [
     "######## Variables BATHROOMS\n",
@@ -169,13 +159,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-=======
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -198,7 +181,6 @@
      ]
     }
    ],
->>>>>>> dadd0c75536eddbd1a49f753eb41c41b360920cd
    "source": [
     "data = Raw_Data\n",
     "\n",
@@ -261,54 +243,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# data processing of Amelia\n",
-    "# variables accommodates, address, amenities\n",
-    "# There are no missing values in accommodates\n",
-    "# cbind the Processed_Data\n",
-    "Processed_Data = pd.concat([Processed_Data, listings['accommodates']], axis = 1)\n",
-    "\n",
-    "# varible address using zipcode\n",
-    "# note zipcode is NOT numeric\n",
-    "Processed_Data = pd.concat([Processed_Data, listings['zipcode']], axis = 1)\n",
-    "\n",
-    "# remove\",{} in amenities, and change ' ' to '_'\n",
-    "amenities = listings['amenities']\n",
-    "for i in range(len(amenities)):\n",
-    "    amenities.at[i] = amenities[i].replace('{','').replace('}','').replace('\"', '').replace(' ','_') \n",
-    "\n",
-    "# put all the possible amenities into one set\n",
-    "sets = set()\n",
-    "for i in range(len(amenities)):\n",
-    "    for field in amenities[i].split(','):\n",
-    "        sets.add('amenities_' + field)\n",
-    "\n",
-    "# create new df to store {0,1} values of amenities\n",
-    "df_amenities = pd.DataFrame(0, columns=list(sets), index=range(Processed_Data.shape[0]))\n",
-    "len(sets)     #126\n",
-    "df_amenities.shape   #(50220, 126)\n",
-    "\n",
-    "# transforming amenities to {0,1}\n",
-    "for s in sets:\n",
-    "    #print(s[10:])\n",
-    "    for i in range(len(amenities)):\n",
-    "        for field in amenities[i].split(','):\n",
-    "            #print(field)\n",
-    "            if field == s[10:]:\n",
-    "                df_amenities[s][i] = 1\n",
-    "df_amenities.sum()\n",
-    "\n",
-    "# cbind Processed_Data and amenities df\n",
-    "Processed_Data = pd.concat([Processed_Data, df_amenities], axis = 1) \n"
-   ]
-=======
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -432,9 +366,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Processing Code of Shuoqiu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Data Processing Code of Shuoqiu\n",
@@ -491,12 +434,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# data processing of Amelia"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
->>>>>>> dadd0c75536eddbd1a49f753eb41c41b360920cd
+   "source": [
+    "# variables accommodates, address, amenities\n",
+    "# There are no missing values in accommodates\n",
+    "# cbind the Processed_Data\n",
+    "Processed_Data = pd.concat([Processed_Data, Raw_Data['accommodates']], axis = 1)\n",
+    "\n",
+    "# varible address using zipcode\n",
+    "# note zipcode is NOT numeric\n",
+    "Processed_Data = pd.concat([Processed_Data, Raw_Data['zipcode']], axis = 1)\n",
+    "\n",
+    "# remove\",{} in amenities, and change ' ' to '_'\n",
+    "amenities = Raw_Data['amenities']\n",
+    "for i in range(len(amenities)):\n",
+    "    amenities.at[i] = amenities[i].replace('{','').replace('}','').replace('\"', '').replace(' ','_') \n",
+    "\n",
+    "# put all the possible amenities into one set\n",
+    "sets = set()\n",
+    "for i in range(len(amenities)):\n",
+    "    for field in amenities[i].split(','):\n",
+    "        sets.add('amenities_' + field)\n",
+    "\n",
+    "# create new df to store {0,1} values of amenities\n",
+    "df_amenities = pd.DataFrame(0, columns=list(sets), index=range(Processed_Data.shape[0]))\n",
+    "len(sets)     #126\n",
+    "df_amenities.shape   #(50220, 126)\n",
+    "\n",
+    "# transforming amenities to {0,1}\n",
+    "for s in sets:\n",
+    "    #print(s[10:])\n",
+    "    for i in range(len(amenities)):\n",
+    "        for field in amenities[i].split(','):\n",
+    "            #print(field)\n",
+    "            if field == s[10:]:\n",
+    "                df_amenities[s][i] = 1\n",
+    "df_amenities.sum()\n",
+    "\n",
+    "# cbind Processed_Data and amenities df\n",
+    "Processed_Data = pd.concat([Processed_Data, df_amenities], axis = 1) \n"
+   ]
   }
  ],
  "metadata": {
