--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -486,6 +486,51 @@
     "# cbind Processed_Data and amenities df\n",
     "Processed_Data = pd.concat([Processed_Data, df_amenities], axis = 1) \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Processing of Fiona"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######instant bookable\n",
+    "instant_bookable = pd.DataFrame(data = Raw_Data['instant_bookable'])\n",
+    "# Transforming the instant_bookable into 0-1\n",
+    "instant_bookable['instant_bookable'][instant_bookable['instant_bookable'] == 't'] = 1\n",
+    "instant_bookable['instant_bookable'][instant_bookable['instant_bookable'] == 'f'] = 0\n",
+    "\n",
+    "######response time\n",
+    "host_response_time = pd.DataFrame(data = Raw_Data['host_response_time'])\n",
+    "#Imputing the missing value  by No_information\n",
+    "host_response_time['host_response_time'] = host_response_time['host_response_time'].replace(np.NaN, \"No_information\")\n",
+    "# Creating host_response_time_df with all 0\n",
+    "host_response_time_df = pd.DataFrame(0, columns = host_response_time['host_response_time'].unique()[:-1], index = range(Processed_Data.shape[0]))\n",
+    "# Transforming the categories into 0-1\n",
+    "for type in host_response_time_df.columns:\n",
+    "    host_response_time_df[type][host_response_time['host_response_time'] == type] = 1\n",
+    "#new column names\n",
+    "host_response_time_df.columns = [\"host_response_time_\" + str(i) for i in host_response_time_df.columns ]\n",
+    "    \n",
+    "######response rate\n",
+    "host_response_rate = pd.DataFrame(data = Raw_Data['host_response_rate'])\n",
+    "# Imputing the missing value by 0%\n",
+    "host_response_rate['host_response_rate'] = host_response_rate['host_response_rate'].replace(np.NaN, \"0%\")\n",
+    "\n",
+    "######reviews per month\n",
+    "reviews_per_month = pd.DataFrame(data = Raw_Data['reviews_per_month'])\n",
+    "# Imputing the missing value by 0\n",
+    "reviews_per_month['reviews_per_month'] = reviews_per_month['reviews_per_month'].replace(np.NaN, 0)\n",
+    "\n",
+    "######cbind\n",
+    "Processed_Data = pd.concat([Processed_Data,instant_bookable, host_response_time_df,host_response_rate,reviews_per_month], axis = 1)  "
+   ]
   }
  ],
  "metadata": {
@@ -504,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
