--- a/Doc/Data Processing-Individual/Data_Processing_Shuoqiu.ipynb
+++ b/Doc/Data Processing-Individual/Data_Processing_Shuoqiu.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\usert\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2698: DtypeWarning: Columns (43,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Real Bed', 'Pull-out Sofa', 'Futon', 'Airbed', 'Couch']\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
@@ -46,32 +62,153 @@
     "        bed_type_u.append(i)\n",
     "print (bed_type_u)\n",
     "\n",
-    "# Create 4 more variables to capture the categories of bed types\n",
+    "# Create 4 more variables to capture the categories of bed types and save them in the new matrix 'df'\n",
     "# Create a variable called \"bed_type_Real_Bed\" and set its value equals to 1 when the bed_type is \"Real Bed\", others follow this logic\n",
     "bed_type_Real_Bed = [0]*len(price_r)\n",
-    "Raw_Data['bed_type_Real_Bed']= bed_type_Real_Bed\n",
-    "Raw_Data.loc[Raw_Data['bed_type'] == 'Real Bed', 'bed_type_Real_Bed'] = 1\n",
+    "df = pd.DataFrame()\n",
+    "df['bed_type_Real_Bed']= bed_type_Real_Bed\n",
+    "df.loc[Raw_Data['bed_type'] == 'Real Bed', 'bed_type_Real_Bed'] = 1\n",
     "\n",
     "# Need to modify the name \"bed_type_Pull_out_Sofa\" as Python does not read \"-\"\n",
     "bed_type_Pull_out_Sofa = [0]*len(price_r)\n",
-    "Raw_Data['bed_type_Pull_out_Sofa']= bed_type_Pull_out_Sofa\n",
-    "Raw_Data.loc[Raw_Data['bed_type'] == 'Pull-out Sofa', 'bed_type_Pull_out_Sofa'] = 1\n",
+    "df['bed_type_Pull_out_Sofa']= bed_type_Pull_out_Sofa\n",
+    "df.loc[Raw_Data['bed_type'] == 'Pull-out Sofa', 'bed_type_Pull_out_Sofa'] = 1\n",
     "\n",
     "# Similar with 'Futon','Airbed' and 'Couch'\n",
     "bed_type_Futon = [0]*len(price_r)\n",
-    "Raw_Data['bed_type_Futon']= bed_type_Futon\n",
-    "Raw_Data.loc[Raw_Data['bed_type'] == 'Futon', 'bed_type_Futon'] = 1\n",
+    "df['bed_type_Futon']= bed_type_Futon\n",
+    "df.loc[Raw_Data['bed_type'] == 'Futon', 'bed_type_Futon'] = 1\n",
     "\n",
     "bed_type_Airbed = [0]*len(price_r)\n",
-    "Raw_Data['bed_type_Airbed']= bed_type_Airbed\n",
-    "Raw_Data.loc[Raw_Data['bed_type'] == 'Airbed', 'bed_type_Airbed'] = 1\n",
+    "df['bed_type_Airbed']= bed_type_Airbed\n",
+    "df.loc[Raw_Data['bed_type'] == 'Airbed', 'bed_type_Airbed'] = 1\n",
     "\n",
     "bed_type_Couch = [0]*len(price_r)\n",
-    "Raw_Data['bed_type_Couch']= bed_type_Couch\n",
-    "Raw_Data.loc[Raw_Data['bed_type'] == 'Couch', 'bed_type_Couch'] = 1\n",
+    "df['bed_type_Couch']= bed_type_Couch\n",
+    "df.loc[Raw_Data['bed_type'] == 'Couch', 'bed_type_Couch'] = 1\n",
     "\n",
-    "Processed_Data = pd.concat([Processed_Data, price, minimum_nights, Raw_Data['bed_type_Real_Bed'], Raw_Data['bed_type_Pull_out_Sofa'], Raw_Data['bed_type_Futon'], Raw_Data['bed_type_Airbed'], Raw_Data['bed_type_Couch']], axis = 1)"
+    "Processed_Data = pd.concat([Processed_Data, price, minimum_nights, df['bed_type_Real_Bed'], df['bed_type_Pull_out_Sofa'], df['bed_type_Futon'], df['bed_type_Airbed'], df['bed_type_Couch']], axis = 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_url</th>\n",
+       "      <th>scrape_id</th>\n",
+       "      <th>last_scraped</th>\n",
+       "      <th>name</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>space</th>\n",
+       "      <th>description</th>\n",
+       "      <th>experiences_offered</th>\n",
+       "      <th>neighborhood_overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>requires_license</th>\n",
+       "      <th>license</th>\n",
+       "      <th>jurisdiction_names</th>\n",
+       "      <th>instant_bookable</th>\n",
+       "      <th>is_business_travel_ready</th>\n",
+       "      <th>cancellation_policy</th>\n",
+       "      <th>require_guest_profile_picture</th>\n",
+       "      <th>require_guest_phone_verification</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2515</td>\n",
+       "      <td>https://www.airbnb.com/rooms/2515</td>\n",
+       "      <td>20180908060534</td>\n",
+       "      <td>2018-09-08</td>\n",
+       "      <td>Stay at Chez Chic budget room #1</td>\n",
+       "      <td>Step into our artistic spacious apartment and ...</td>\n",
+       "      <td>-PLEASE BOOK DIRECTLY. NO NEED TO SEND A REQUE...</td>\n",
+       "      <td>Step into our artistic spacious apartment and ...</td>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>strict_14_with_grace_period</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 96 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                        listing_url       scrape_id last_scraped  \\\n",
+       "0  2515  https://www.airbnb.com/rooms/2515  20180908060534   2018-09-08   \n",
+       "\n",
+       "                               name  \\\n",
+       "0  Stay at Chez Chic budget room #1   \n",
+       "\n",
+       "                                             summary  \\\n",
+       "0  Step into our artistic spacious apartment and ...   \n",
+       "\n",
+       "                                               space  \\\n",
+       "0  -PLEASE BOOK DIRECTLY. NO NEED TO SEND A REQUE...   \n",
+       "\n",
+       "                                         description experiences_offered  \\\n",
+       "0  Step into our artistic spacious apartment and ...                none   \n",
+       "\n",
+       "  neighborhood_overview        ...         requires_license license  \\\n",
+       "0                   NaN        ...                        f     NaN   \n",
+       "\n",
+       "  jurisdiction_names instant_bookable is_business_travel_ready  \\\n",
+       "0                NaN                f                        f   \n",
+       "\n",
+       "           cancellation_policy  require_guest_profile_picture  \\\n",
+       "0  strict_14_with_grace_period                              f   \n",
+       "\n",
+       "  require_guest_phone_verification  calculated_host_listings_count  \\\n",
+       "0                                f                               3   \n",
+       "\n",
+       "   reviews_per_month  \n",
+       "0               1.41  \n",
+       "\n",
+       "[1 rows x 96 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
