--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -362,18 +362,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Data Processing Code of Ge Zhang"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#host_has_profile_pic\n",
+    "#host_identity_verified\n",
+    "#guests_included\n",
+    "\n",
+    "#1.host_has_profile_pic, change t/f to 1/0\n",
+    "host=pd.DataFrame(data=Raw_Data['host_has_profile_pic'])\n",
+    "# Transforming the host_has_profile_pic into 0-1\n",
+    "host['host_has_profile_pic'][host['host_has_profile_pic'] == 't'] = 1\n",
+    "# Imputing the missing value by 0\n",
+    "host['host_has_profile_pic'][host['host_has_profile_pic'] != 1] = 0  \n",
+    "host['host_has_profile_pic']\n",
+    "# Combine processed data \n",
+    "Processed_Data = pd.concat([Processed_Data, host], axis = 1)\n",
+    "\n",
+    "#2.host_identity_verified, change t/f to 1/0\n",
+    "identity=pd.DataFrame(data=Raw_Data['host_identity_verified'])\n",
+    "# Transforming the host_identity_verified into 0-1\n",
+    "identity['host_identity_verified'][identity['host_identity_verified'] == 't'] = 1\n",
+    "# Imputing the missing value by 0\n",
+    "identity['host_identity_verified'][identity['host_identity_verified'] != 1] = 0  \n",
+    "identity['host_identity_verified']\n",
+    "# Combine processed data \n",
+    "Processed_Data = pd.concat([Processed_Data, identity], axis = 1)\n",
+    "\n",
+    "\n",
+    "#3.guests_included, no change \n",
+    "guests=pd.DataFrame(data=Raw_Data['guests_included'])\n",
+    "Processed_Data = pd.concat([Processed_Data, guests], axis = 1)"
+   ]
   }
  ],
  "metadata": {
@@ -392,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
