--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -496,9 +496,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-22c06080e75a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m######instant bookable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0minstant_bookable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRaw_Data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'instant_bookable'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# Transforming the instant_bookable into 0-1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0minstant_bookable\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'instant_bookable'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minstant_bookable\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'instant_bookable'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m't'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0minstant_bookable\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'instant_bookable'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minstant_bookable\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'instant_bookable'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'f'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "######instant bookable\n",
     "instant_bookable = pd.DataFrame(data = Raw_Data['instant_bookable'])\n",
@@ -531,6 +543,40 @@
     "######cbind\n",
     "Processed_Data = pd.concat([Processed_Data,instant_bookable, host_response_time_df,host_response_rate,reviews_per_month], axis = 1)  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Processing of Ge "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#host_has_profile_pic\n",
+    "#host_identity_verified\n",
+    "#guests_included\n",
+    "\n",
+    "#1.host_has_profile_pic, change t/f to 1/0\n",
+    "Processed_Data=pd.DataFrame(data=Raw_Data['host_has_profile_pic'])\n",
+    "# Transforming the host_has_profile_pic into 0-1\n",
+    "Processed_Data['host_has_profile_pic'][Processed_Data['host_has_profile_pic'] == 't'] = 1\n",
+    "# Imputing the missing value by 0\n",
+    "Processed_Data['host_has_profile_pic'][Processed_Data['host_has_profile_pic'] != 1] = 0  \n",
+    "Processed_Data['host_has_profile_pic']\n",
+    "\n",
+    "#2.host_identity_verified, change t/f to 1/0\n",
+    "Processed_Data=pd.DataFrame(data=Raw_Data['host_identity_verified'])\n",
+    "# Transforming the host_has_profile_pic into 0-1\n",
+    "Processed_Data['host_identity_verified'][Processed_Data['host_identity_verified'] == 't'] = 1\n",
+    "# Imputing the missing value by 0\n",
+    "Processed_Data['host_identity_verified'][Processed_Data['host_identity_verified'] != 1] = 0  \n",
+    "Processed_Data['host_identity_verified']"
+   ]
   }
  ],
  "metadata": {
@@ -549,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
