--- a/Doc/Data Processing-Individual/Data_Processing_Shuoqiu.ipynb
+++ b/Doc/Data Processing-Individual/Data_Processing_Shuoqiu.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\usert\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2698: DtypeWarning: Columns (43,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\KevinZhang\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2785: DtypeWarning: Columns (43,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Real Bed', 'Pull-out Sofa', 'Futon', 'Airbed', 'Couch']\n"
+      "['Real Bed', 'Pull-out Sofa', 'Airbed', 'Futon', 'Couch']\n"
      ]
     }
    ],
@@ -32,9 +32,9 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "os.chdir('C:/Users/usert/Documents/GitHub/GitHub')\n",
+    "#os.chdir('C:/Users/usert/Documents/GitHub/GitHub')\n",
     "\n",
-    "Raw_Data = pd.read_csv(\"listings.csv\", error_bad_lines=False, warn_bad_lines=False)\n",
+    "Raw_Data = pd.read_csv(\"D:/OneDrive - The City University of New York/Columbia Courses/2018 Fall/GR5291 Advanced Data Analysis/Group Project/Data for ADA/Data/listings.csv\")\n",
     "Processed_Data = pd.DataFrame(data = Raw_Data['host_is_superhost'])\n",
     "\n",
     "# Remove the dollar sign from price variable and turn the characters as float\n",
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
