--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,8 @@
       "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (43,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
       "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "  interactivity=interactivity, compiler=compiler, result=result)\n",
+      "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:19: FutureWarning: sort(columns=....) is deprecated, use sort_values(by=.....)\n"
      ]
     }
    ],
@@ -396,15 +397,26 @@
     "Processed_Data.no_smoke.fillna(0, inplace=True) \n",
     "Processed_Data.deposit_price_ratio.fillna(0, inplace=True)\n",
     "Processed_Data.dropna(inplace=True)\n",
+    "Processed_Data.sort(columns='id',inplace=True)\n",
     "Processed_Data.to_csv('Processed_Data2.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ids=Processed_Data.id.values\n",
+    "np.random.shuffle(ids)\n",
+    "train_index=ids[:len(ids)//4*3]\n",
+    "test_index=ids[len(ids)//4*3:]\n",
+    "train=Processed_Data.ix[train_index,:]\n",
+    "test=Processed_Data.ix[test_index,:]\n",
+    "train.shape, test.shape\n",
+    "train.to_csv('train.csv')\n",
+    "test.to_csv('test.csv')"
+   ]
   },
   {
    "cell_type": "code",
