--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
       "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:19: FutureWarning: sort(columns=....) is deprecated, use sort_values(by=.....)\n"
+      "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:20: FutureWarning: sort(columns=....) is deprecated, use sort_values(by=.....)\n"
      ]
     }
    ],
@@ -389,7 +389,8 @@
     "Processed_Data.drop(['Unnamed: 0',  'Unnamed: 0.1', \n",
     "                     'id.1',  'reviews_per_month.1',\n",
     "                     'host_response_time_No_information',\n",
-    "                     'host_varification_count', 'zipcode'], axis=1,inplace=True)\n",
+    "                     'host_varification_count', 'zipcode','amenities_'], axis=1,inplace=True)\n",
+    "Processed_Data['host_response_rate']=pd.to_numeric(Processed_Data.host_response_rate.str.strip('%'))/100\n",
     "\n",
     "selector=Processed_Data['price']!=0 # drop rows that with price=0 which cause deposit_price_ratio Nan\n",
     "Processed_Data=Processed_Data.ix[selector,:]\n",
@@ -403,20 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((28734, 213), (9581, 213))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ids=Processed_Data.id.values\n",
     "np.random.shuffle(ids)\n",
@@ -425,7 +415,7 @@
     "train_selector=[i in train_index for i in Processed_Data['id']]\n",
     "test_selector=[i in test_index for i in Processed_Data['id']]\n",
     "train=Processed_Data.iloc[train_selector,:]\n",
-    "test=Processed_Data.ix[test_index,:]\n",
+    "test=Processed_Data.iloc[test_selector,:]\n",
     "# train.shape, test.shape\n",
     "train.to_csv('train.csv')\n",
     "test.to_csv('test.csv')"
@@ -433,248 +423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>id</th>\n",
-       "      <th>host_is_superhost</th>\n",
-       "      <th>property_type_Apartment</th>\n",
-       "      <th>property_type_Guest suite</th>\n",
-       "      <th>property_type_House</th>\n",
-       "      <th>property_type_Loft</th>\n",
-       "      <th>property_type_Townhouse</th>\n",
-       "      <th>property_type_Bed and breakfast</th>\n",
-       "      <th>property_type_Condominium</th>\n",
-       "      <th>...</th>\n",
-       "      <th>host_varification_'sent_id'</th>\n",
-       "      <th>host_varification_'manual_offline'</th>\n",
-       "      <th>host_varification_'photographer'</th>\n",
-       "      <th>host_varification_'weibo'</th>\n",
-       "      <th>host_varification_'sesame'</th>\n",
-       "      <th>host_varification_'sesame_offline'</th>\n",
-       "      <th>host_varification_'zhima_selfie'</th>\n",
-       "      <th>cleaning_fee</th>\n",
-       "      <th>neighbourhood_cleansed</th>\n",
-       "      <th>review_scores_rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>16571138</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>Harlem</td>\n",
-       "      <td>93.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>570865</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25</td>\n",
-       "      <td>Kensington</td>\n",
-       "      <td>98.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>26063436</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Midtown</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>20909252</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>125</td>\n",
-       "      <td>Williamsburg</td>\n",
-       "      <td>97.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>20567712</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Clinton Hill</td>\n",
-       "      <td>91.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 214 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0        id  host_is_superhost  property_type_Apartment  \\\n",
-       "0           0  16571138                  0                        1   \n",
-       "1           1    570865                  1                        1   \n",
-       "2           2  26063436                  0                        1   \n",
-       "3           3  20909252                  0                        1   \n",
-       "4           5  20567712                  0                        0   \n",
-       "\n",
-       "   property_type_Guest suite  property_type_House  property_type_Loft  \\\n",
-       "0                          0                    0                   0   \n",
-       "1                          0                    0                   0   \n",
-       "2                          0                    0                   0   \n",
-       "3                          0                    0                   0   \n",
-       "4                          1                    0                   0   \n",
-       "\n",
-       "   property_type_Townhouse  property_type_Bed and breakfast  \\\n",
-       "0                        0                                0   \n",
-       "1                        0                                0   \n",
-       "2                        0                                0   \n",
-       "3                        0                                0   \n",
-       "4                        0                                0   \n",
-       "\n",
-       "   property_type_Condominium          ...           \\\n",
-       "0                          0          ...            \n",
-       "1                          0          ...            \n",
-       "2                          0          ...            \n",
-       "3                          0          ...            \n",
-       "4                          0          ...            \n",
-       "\n",
-       "   host_varification_'sent_id'  host_varification_'manual_offline'  \\\n",
-       "0                            0                                   0   \n",
-       "1                            0                                   0   \n",
-       "2                            0                                   0   \n",
-       "3                            0                                   0   \n",
-       "4                            0                                   0   \n",
-       "\n",
-       "   host_varification_'photographer'  host_varification_'weibo'  \\\n",
-       "0                                 0                          0   \n",
-       "1                                 0                          0   \n",
-       "2                                 0                          0   \n",
-       "3                                 0                          0   \n",
-       "4                                 0                          0   \n",
-       "\n",
-       "   host_varification_'sesame'  host_varification_'sesame_offline'  \\\n",
-       "0                           0                                   0   \n",
-       "1                           0                                   0   \n",
-       "2                           0                                   0   \n",
-       "3                           0                                   0   \n",
-       "4                           0                                   0   \n",
-       "\n",
-       "   host_varification_'zhima_selfie'  cleaning_fee  neighbourhood_cleansed  \\\n",
-       "0                                 0            60                  Harlem   \n",
-       "1                                 0            25              Kensington   \n",
-       "2                                 0           100                 Midtown   \n",
-       "3                                 0           125            Williamsburg   \n",
-       "4                                 0             0            Clinton Hill   \n",
-       "\n",
-       "   review_scores_rating  \n",
-       "0                  93.0  \n",
-       "1                  98.0  \n",
-       "2                  94.0  \n",
-       "3                  97.0  \n",
-       "4                  91.0  \n",
-       "\n",
-       "[5 rows x 214 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# pd.set_option('display.max_row',1000)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Processed_Data.id."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
