--- a/Doc/Data_Processing_Master.ipynb
+++ b/Doc/Data_Processing_Master.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
       "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:20: FutureWarning: sort(columns=....) is deprecated, use sort_values(by=.....)\n"
+      "/Users/hongbozhu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:21: FutureWarning: sort(columns=....) is deprecated, use sort_values(by=.....)\n"
      ]
     }
    ],
@@ -391,6 +391,7 @@
     "                     'host_response_time_No_information',\n",
     "                     'host_varification_count', 'zipcode','amenities_'], axis=1,inplace=True)\n",
     "Processed_Data['host_response_rate']=pd.to_numeric(Processed_Data.host_response_rate.str.strip('%'))/100\n",
+    "Processed_Data=pd.get_dummies(Processed_Data, drop_first=True)\n",
     "\n",
     "selector=Processed_Data['price']!=0 # drop rows that with price=0 which cause deposit_price_ratio Nan\n",
     "Processed_Data=Processed_Data.ix[selector,:]\n",
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,16 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# pd.set_option('display.max_row',1000)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": []
